# from official documents
is_debug = false
symbol_level = 0
enable_nacl = false
blink_symbol_level=0
v8_symbol_level=0
target_cpu = "arm64"
target_os = "linux"
cc_wrapper="ccache"

# from thorium
#enable_linux_installer = true
enable_stripping = true
is_official_build = true
dcheck_always_on = false
disable_fieldtrial_testing_config = true
enable_profiling = false
is_component_build = false
optimize_webui = true
v8_enable_builtins_optimization = true
v8_enable_maglev = true
v8_enable_turbofan = true
# <<This blocks the build with lld errors>>
# v8_enable_wasm_simd256_revec = true
use_v8_context_snapshot = true
proprietary_codecs = true
ffmpeg_branding = "Chrome"
use_vaapi = true
enable_widevine = true
enable_media_drm_storage = true
enable_platform_hevc = true
enable_rust = true
enable_all_rust_features = true
use_text_section_splitting = true
media_use_ffmpeg = true
media_use_libvpx = true
enable_hls_demuxer = true
enable_ffmpeg_video_decoders = true
enable_hevc_parser_and_hw_decoder = true
enable_platform_ac3_eac3_audio = true
enable_platform_mpeg_h_audio = true
enable_platform_dts_audio = true
use_thin_lto = true
thin_lto_enable_optimizations = true
chrome_pgo_phase = 2

# from ungoogled-chromium-portablelinux
disable_fieldtrial_testing_config = true
blink_enable_generated_code_formatting = false
fatal_linker_warnings = false
is_clang = true
use_kerberos = false
use_sysroot = true
use_system_libffi = false
